# RBOT_auto_initialization

./: .gitignore  CMakeLists.txt  RBOT
include/utils/: common.h
src/: main.cpp  optimization_engine.cpp  optimization_engine.h  pose_estimator6d.cpp  pose_estimator6d.h  yolo_detector.cpp  yolo_detector.h
src/onnx/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp
