cmake_minimum_required(VERSION 3.10)

SET(PROJECTNAME RBOT)
PROJECT(${PROJECTNAME})

SET(CMAKE_VERBOSE_MAKEFILE ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(OpenCV_STATIC OFF)

set(ONNXRUNTIME_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include/onnxruntime-linux-x64-gpu-1.17.0/")
set(ONNXRUNTIME_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/onnxruntime-linux-x64-gpu-1.17.0/libonnxruntime.so")
set(ONNXRUNTIME_PROVIDERS_SHARED_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/onnxruntime-linux-x64-gpu-1.17.0/libonnxruntime_providers_shared.so")
set(ONNXRUNTIME_PROVIDERS_CUDA_LIBRARY "${CMAKE_CURRENT_SOURCE_DIR}/lib/onnxruntime-linux-x64-gpu-1.17.0/libonnxruntime_providers_cuda.so")

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
	"${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")

SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)

FILE(GLOB SOURCES src/*.cpp src/*.h src/*.hpp src/*.glsl src/onnx/*.cpp src/utils/*.cpp)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5OpenGL REQUIRED)
FIND_PACKAGE(ASSIMP REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

SET(LIBRARIES 
	Qt5::Widgets 
	Qt5::OpenGL
	${OpenCV_LIBS}
	${OPENGL_LIBRARIES}
	${ASSIMP_LIBRARIES}
)

INCLUDE_DIRECTORIES(
	include
	${OpenCV_INCLUDE_DIRS} 
	${OPENGL_INCLUDE_DIR}
	${ASSIMP_INCLUDE_DIR}
	${ONNXRUNTIME_INCLUDE_DIR}
)

ADD_EXECUTABLE(${PROJECTNAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECTNAME} ${LIBRARIES} ${ONNXRUNTIME_LIBRARY} ${ONNXRUNTIME_PROVIDERS_CUDA_LIBRARY} ${ONNXRUNTIME_PROVIDERS_SHARED_LIBRARY} Threads::Threads)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})